[gd_scene load_steps=4 format=3 uid="uid://bv57pur4ljxxg"]

[ext_resource type="Script" uid="uid://b1jktl23jp218" path="res://scripts/correo_mitigation.gd" id="1_pas27"]
[ext_resource type="Texture2D" uid="uid://ci0h6bgxhk7rn" path="res://assets/CORREO.jpg" id="2_lv8uj"]
[ext_resource type="Texture2D" uid="uid://ymctg4adov88" path="res://assets/beige.png" id="3_kb7jq"]

[node name="Correo_eleccion_estrategia" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pas27")

[node name="fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 648.0
texture = ExtResource("2_lv8uj")

[node name="atenuacion_del_blanco" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.24313726)
layout_mode = 0
offset_left = -7.0
offset_top = -9.0
offset_right = 1156.0
offset_bottom = 653.0
texture = ExtResource("3_kb7jq")

[node name="correo" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 163.0
offset_right = 1127.0
offset_bottom = 617.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "
"

[node name="opciones_estrategias" type="PopupMenu" parent="."]
oversampling_override = 1.0
position = Vector2i(400, 350)
visible = true

[node name="kinetic_impactor" type="Button" parent="."]
modulate = Color(0.16206557, 0.1620656, 0.16206557, 1)
layout_mode = 0
offset_left = 202.0
offset_top = -1.0
offset_right = 336.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 13
text = "kinetic impactor"
flat = true

[node name="gravity_tractor" type="Button" parent="."]
modulate = Color(0.16078432, 0.16078432, 0.16078432, 1)
layout_mode = 0
offset_left = 375.0
offset_top = -1.0
offset_right = 477.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 13
text = "gravity tractor"
flat = true

[node name="ion_beam" type="Button" parent="."]
modulate = Color(0.16078432, 0.16078432, 0.16078432, 1)
layout_mode = 0
offset_left = 534.0
offset_top = 2.0
offset_right = 640.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 13
text = "ion beam "
flat = true

[node name="nuclear_interceptor" type="Button" parent="."]
modulate = Color(0.16078432, 0.16078432, 0.16078432, 1)
layout_mode = 0
offset_left = 677.0
offset_top = 2.0
offset_right = 810.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 13
text = "nuclear interceptor"
flat = true

[node name="email" type="Button" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 65.0
offset_top = 2.0
offset_right = 161.0
offset_bottom = 28.0
theme_override_font_sizes/font_size = 13
text = "Email"
flat = true

[node name="send" type="Button" parent="."]
layout_mode = 0
offset_left = 1016.0
offset_top = 598.0
offset_right = 1135.0
offset_bottom = 624.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 13
text = "	SEND"
flat = true
